--- a/index.html
+++ b/index.html
@@ -52,21 +52,19 @@
                     <img class = "boyimage" src="Image/20200630_162659.gif" alt="">
                 </div>  
                   <div class="col-lg-6 section-1">
-                      <h1 class = "Hello">Hello All! I'm Ajit <span class="wave">👋</span></h1>
-                      <p>A passionate Developer having an experience in Data Analytics,
-                          Machine Learning and Web Development and want to develop sustainable and 
-                          scalable social and technical systems to create impact</p>
+                      <h1 class = "Hello">Hi! I'm Andie <span class="wave">👋</span></h1>
+                      <p>A recent graduate interested in spatial analysis & GIS web development</p>
                           <div class=social_media_icon>
-                            <a class="btn" href="https://www.instagram.com/ajit.verma_/" target=_blank>
+                            <a class="btn" href="https://www.instagram.com/vegandieeeee/" target=_blank>
                               <i class="fab fa-instagram"></i>
                             </a>
-                            <a class="btn" href="https://www.linkedin.com/in/ajit-verma-70b9b0196/" target=_blank>
+                            <a class="btn" href="https://www.linkedin.com/in/andieh-/" target=_blank>
                               <i class="fab fa-linkedin" aria-hidden="true"></i>
                             </a>
-                            <a class="btn" href="https://github.com/AjitVerma15" target=_blank>
+                            <a class="btn" href="https://github.com/aherstek" target=_blank>
                               <i class="fab fa-github"></i>
                             </a>
-                            <a class="btn" href="mailto:ajitverma1503@gmail.com" target=_blank>
+                            <a class="btn" href="mailto:andieherstek@gmail.com" target=_blank>
                               <i class="fab fa-google"></i>
                             </a>
                           </div>
@@ -77,7 +75,7 @@
 
 
           <section id=Whatido>
-            <h1>What I Do ?</h1>
+            <h1>What Do I Do ?</h1>
               <div class = "row feature-1">
                   <div class="col-lg-6 col-md-6 Feature-first-image ">
                     <img class = "Feature-svg-image" src="Image/Data_Analysis.svg" alt="">
@@ -91,10 +89,10 @@
                     </ul>
                     <div class = "Data-Analytic">
                       <p class ="Features-paragraph">
-                         💥 Developing Models that clean, tranform and analyse raw data to discover useful information,
+                         ✨ Developing Models that clean, tranform and analyse raw data to discover useful information,
                          in order to make conclusions about the data.</p>
                       <p  class ="Features-paragraph">
-                         💥 Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, Seaborn etc. and have knowledge of
+                         ✨ Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, Seaborn etc. and have knowledge of
                         Data analysis algorithms and techniques.</p>
                     </div>
                 </div>
@@ -114,11 +112,11 @@
                   </ul>
                   <div class = "Data-Analytic">
                     <p class ="Features-paragraph">
-                       💥 Building Fully responsive website frontend using HTML, CSS, Bootstrap and Javascript.</p>
+                       ✨ Building Fully responsive website frontend using HTML, CSS, Bootstrap and Javascript.</p>
                     <p  class ="Features-paragraph">
-                       💥 As of now I have knowledge only of frontend but in near future I will learn more skills and excited to explore React, NodeJS, Django, Flask and many more.</p>
+                       ✨ As of now I have knowledge only of frontend but in near future I will learn more skills and excited to explore React, NodeJS, Django, Flask and many more.</p>
                       <p  class ="Features-paragraph">
-                       💥 I have also used Abode Photoshop, Illustrator and Figma to design User interface of websites and mobile applications and designed logos.</p>
+                       ✨ I have also used Abode Photoshop, Illustrator and Figma to design User interface of websites and mobile applications and designed logos.</p>
                       </div>
                 </div>
                 <div class="col-lg-6 col-md-6 Feature-second-image ">
@@ -139,15 +137,15 @@
                     </ul>
                     <div class = "Data-Analytic">
                       <p class ="Features-paragraph">
-                         💥 I have knowledge of Data Structures like Hash Tables, Trees, Tries, Graphs, and various algorithms for solving various problems efficiently.</p>
+                         ✨ I have knowledge of Data Structures like Hash Tables, Trees, Tries, Graphs, and various algorithms for solving various problems efficiently.</p>
                       <p  class ="Features-paragraph">
-                         💥 As I know Data Structures and Algorithms are the heart of programming, so I love to solve programming questions in different competitive websites like Codeforces, Codechef, Hackerrank and many more.</p>
+                         ✨ As I know Data Structures and Algorithms are the heart of programming, so I love to solve programming questions in different competitive websites like Codeforces, Codechef, Hackerrank and many more.</p>
                         </div>
                   </div>
               </div>
                
         
           </section>
-    <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+    <footer class=footer>Made with ❤️ by Andie Herstek</footer>
 </body>
 </html>
