--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width,initial-scale=1">
-  <title>Ajit's Portfolio</title>
+  <title>Andie's Portfolio</title>
   <link rel="icon" href="Image/engineer.ico">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -53,7 +53,7 @@
                 </div>  
                   <div class="col-lg-6 section-1">
                       <h1 class = "Hello">Hi! I'm Andie <span class="wave">👋</span></h1>
-                      <p>A recent graduate interested in spatial analysis & GIS web development</p>
+                      <p>A recent GIS graduate interested in spatial analysis & web development</p>
                           <div class=social_media_icon>
                             <a class="btn" href="https://www.instagram.com/vegandieeeee/" target=_blank>
                               <i class="fab fa-instagram"></i>
@@ -81,7 +81,7 @@
                     <img class = "Feature-svg-image" src="Image/Data_Analysis.svg" alt="">
                   </div>
                   <div class="col-lg-6 col-md-6">
-                    <h1 class= "Feature-Heading" >Data Analytics & ML</h1>
+                    <h1 class= "Feature-Heading" >Spatial Analysis</h1>
                     <ul class = "dev-icon">
                       <li><i class="fab fa-python fa-5x" style="color:#3776ab"></i></li>
                       <li><img class="numpy" src="Image/numpy-ar21.svg" alt=""></li>
@@ -128,7 +128,7 @@
                     <img class = "Feature-svg-image-3" src="Image/Coding.svg" alt="">
                   </div>
                   <div class="col-lg-6 col-md-6 feature-coding">
-                    <h1 class="Feature-Heading">Data Structures and Algorithms</h1>
+                    <h1 class="Feature-Heading">Database Structures</h1>
                     <ul class = "dev-icon">
                      <li></li>
                      <li><i class="fas fa-laptop-code fa-4x"></i></li>
