--- a/Education.html
+++ b/Education.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Ajit's Portfolio</title>
+    <title>Andie's Portfolio</title>
     <link rel="icon" href="Image/engineer.ico">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css"
         integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
@@ -83,22 +83,21 @@
                 </div>
                 <div class="timeline-section">
                     <div class="timeline-date">
-                        2017 - Present
+                        2023 - Present
                     </div>
                     <div class="row">
                         <div class="col-lg">
                             <div class="timeline-box">
                                 <div class="box-title">
-                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i>J.C. Bose University of
-                                    Science and Technology, YMCA
-                                    <p class="degree">B.tech in Computer Engineering</p>
+                                    <i class="fas fa-graduation-cap" aria-hidden="true"></i>Fleming College
+                                    <p class="degree">Postgraduate Diploma, GIS Applications</p>
                                 </div>
                                 <div class="box-content">
-                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://jcboseust.ac.in/"
+                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://flemingcollege.ca/"
                                        target=_blank style="color: white;">Website</a>
-                                    <div class="box-item">💥 I have studied software engineering subjects like Data Structures,
+                                    <div class="box-item">✨ I have studied software engineering subjects like Data Structures,
                                         Algorithms, DBMS, OS, CA, CN etc.</div>
-                                    <div class="box-item"><b>💥 CGPA</b>: 7.14 </div>
+                                    <div class="box-item"><b>✨ CGPA</b>: 7.14 </div>
                                 </div>
                             </div>
                         </div>
@@ -113,14 +112,13 @@
                         <div class="col-lg">
                             <div class="timeline-box">
                                 <div class="box-title">
-                                    <i class="fas fa-school" aria-hidden="true"></i> G.B.S.S School, Sarojini Nagar <p class="degree">Senior Secondary Education</p>
+                                    <i class="fas fa-school" aria-hidden="true"></i>Trent University <p class="degree">BScH, Environmental Science</p>
                                 </div>
                                 <div class="box-content">
-                                    <a class="btn btn-sm btn-dark float-right" role="button"
-                                        style="color: white;">Details</a>
-                                    <div class="box-item">💥 I have studied the subjects Physics,
-                                        Chemistry, Mathematics etc. </div>
-                                    <div class="box-item"><b>💥 Percentage</b>: 80%</div>
+                                    <a class="btn btn-sm btn-dark float-right" role="button" href="https://trentu.ca/
+                                       target=_blank style="color: white;">Website</a>
+                                    <div class="box-item">✨ Info here</div>
+                                    <div class="box-item"><b>✨ Percentage</b>: 80%</div>
 
                                 </div>
                             </div>
@@ -179,7 +177,7 @@
             </div>
         </div>
     </section>
-    <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+    <footer class=footer>Made with ❤️ by Andie Herstek</footer>
 </body>
 
 </html>
