--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
           <section id = "Home">
               <div class="row column1">
                 <div class="col-lg-6 col-md-6 first-image">
-                    <img class = "boyimage" src="Image/20200630_162659.gif" alt="">
+                    <img class = "boyimage" src="Image/girl1.png" alt="">
                 </div>  
                   <div class="col-lg-6 section-1">
                       <h1 class = "Hello">Hi! I'm Andie <span class="wave">👋</span></h1>
