--- a/contact.html
+++ b/contact.html
@@ -30,7 +30,7 @@
 <body class="container-fluid body_section">
     <header>
         <nav class="navbar navbar-expand-lg navbar-light ">
-            <a class="navbar-brand brand-name" href="#">Ajit Verma</a>
+            <a class="navbar-brand brand-name" href="#">Andie Herstek</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
                 aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -59,17 +59,16 @@
     <section id="contact">
         <div class="row first-section">
             <div class="col-lg-6 col-md-6">
-                <img class = "Profilepic" src="Image/Ajit.jpg" alt="">
+                <img class = "Profilepic" src="Image/girl1.png" alt="">
             </div>
             <div class="col-lg-6 col-md-6 context">
                 <h1>Reach out to me!</h1>
-                <p>I am available on almost every social media platform.<br>
-                    You want to discuss a project or just want to say hi? My Inbox is always open for you.</p>
+                <p> text text text text </p>
                 <ul class="ico">
-                    <li class="icon"><a href="https://github.com/AjitVerma15" target=_blank><span class="iconify github" data-icon="ant-design:github-filled" data-inline="false"  data-width="50" data-height="50"></span></li></a>
-                     <li class="icon"><a href="https://www.instagram.com/ajit.verma_/" target=_blank><span class="iconify instagram" data-icon="entypo-social:instagram-with-circle" data-inline="false" data-width="50" data-height="50"></span></li></a>
-                     <li class="icon"><a href="https://www.linkedin.com/in/ajit-verma-70b9b0196/" target=_blank><span class="iconify linkedin" data-icon="entypo-social:linkedin-with-circle" data-inline="false"  data-width="50" data-height="50"></span></li></a>
-                    <li class="icon"><a href="mailto:ajitverma1503@gmail.com" target=_blank><span class="iconify google" data-icon="ant-design:google-plus-circle-filled" data-inline="false" data-width="50" data-height="50"></span></li></a>
+                    <li class="icon"><a href="https://github.com/aherstek" target=_blank><span class="iconify github" data-icon="ant-design:github-filled" data-inline="false"  data-width="50" data-height="50"></span></li></a>
+                     <li class="icon"><a href="https://www.instagram.com/vegandieeeee/" target=_blank><span class="iconify instagram" data-icon="entypo-social:instagram-with-circle" data-inline="false" data-width="50" data-height="50"></span></li></a>
+                     <li class="icon"><a href="https://www.linkedin.com/in/andieh-/" target=_blank><span class="iconify linkedin" data-icon="entypo-social:linkedin-with-circle" data-inline="false"  data-width="50" data-height="50"></span></li></a>
+                    <li class="icon"><a href="mailto:andieherstek@gmail.com" target=_blank><span class="iconify google" data-icon="ant-design:google-plus-circle-filled" data-inline="false" data-width="50" data-height="50"></span></li></a>
                     </ul>
                     <a href="https://drive.google.com/file/d/1fUl3-3KZQbWz3x6eBLSC2qZboLyWgj6o/view?usp=sharing" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
              </div>
@@ -77,13 +76,12 @@
         </section>
     <section>
         <div class="second-section">
-            <h1 class="connect">Let's connect and build something together!</h1>
-            <a class="sayhello" href="#contact">Say Hello <span class="wave">👋</span></a>
+            <h1 class="connect">text text text!</h1>
             <div class="col-lg-6 connect-image">
             <img  class= "connection" src="Image/connection.svg" alt="">
         </div>
         </div>
     </section>
-    <footer class=footer>Made with ❤️ by Ajit Verma</footer>   
+    <footer class=footer>Made with ❤️ by Andie Herstek</footer>   
     </body>
     </html>
