--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 <body class="container-fluid body_section">
         <header>
               <nav class="navbar navbar-expand-lg navbar-light ">
-                <<img class="navbar-brand brand-name" src="image/logo.png" alt="Andie Herstek">
+                <img class="navbar-brand brand-name" src="image/logo.png" alt="Andie Herstek">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                   <span class="navbar-toggler-icon"></span>
                 </button>
@@ -82,41 +82,24 @@
                   </div>
                   <div class="col-lg-6 col-md-6">
                     <h1 class= "Feature-Heading" >Spatial Analysis</h1>
-                    <ul class = "dev-icon">
-                      <li><i class="fab fa-python fa-5x" style="color:#3776ab"></i></li>
-                      <li><img class="numpy" src="Image/numpy-ar21.svg" alt=""></li>
-                      <li><img class = "pandas" src="Image/kindpng_5747046.png" alt=""></li>
-                    </ul>
                     <div class = "Data-Analytic">
                       <p class ="Features-paragraph">
-                         ✨ Developing Models that clean, tranform and analyse raw data to discover useful information,
-                         in order to make conclusions about the data.</p>
+                         ✨ text text text </p>
                       <p  class ="Features-paragraph">
-                         ✨ Experience of working with different python Libraries like Numpy, Pandas, Matplotlib, Seaborn etc. and have knowledge of
-                        Data analysis algorithms and techniques.</p>
+                         ✨ text text text </p>
                     </div>
                 </div>
               </div>
               <div class="row feature-2">
                 <div class="col-lg-6 col-md-6 feature-web">
                   <h1 class="Feature-Heading">Web Development</h1>
-                  <ul class = "dev-icon">
-                    <li><i class="fab fa-html5 fa-5x" style="color:#e34f26"></i></li>
-                    <li><i class="fab fa-css3-alt fa-5x" style="color:#1572b6"></i></li>
-                    <li><i class="fab fa-bootstrap fa-5x" style="color:#543b79"></i></li>
-                    <li><i class="fab fa-js-square fa-5x" style="color:#f7df1e"></i></li>
-                    <li><i class="fab fa-react fa-5x" style="color:#61dafb"></i></li>
-                    <li><i class="fab fa-node fa-5x" style="color:#679e63"></i></li>
-                    <li><i class="fab fa-figma fa-5x" style="color:#f24e1e"></i></li>
-                
-                  </ul>
                   <div class = "Data-Analytic">
                     <p class ="Features-paragraph">
-                       ✨ Building Fully responsive website frontend using HTML, CSS, Bootstrap and Javascript.</p>
+                       ✨ text text text</p>
                     <p  class ="Features-paragraph">
-                       ✨ As of now I have knowledge only of frontend but in near future I will learn more skills and excited to explore React, NodeJS, Django, Flask and many more.</p>
+                       ✨ text text text</p>
                       <p  class ="Features-paragraph">
-                       ✨ I have also used Abode Photoshop, Illustrator and Figma to design User interface of websites and mobile applications and designed logos.</p>
+                       ✨ text text text </p>
                       </div>
                 </div>
                 <div class="col-lg-6 col-md-6 Feature-second-image ">
@@ -129,17 +112,11 @@
                   </div>
                   <div class="col-lg-6 col-md-6 feature-coding">
                     <h1 class="Feature-Heading">Database Structures</h1>
-                    <ul class = "dev-icon">
-                     <li></li>
-                     <li><i class="fas fa-laptop-code fa-4x"></i></li>
-                     
-                     <li><i class="fas fa-file-code fa-4x" style="color: #a8afcb;"></i></li>
-                    </ul>
                     <div class = "Data-Analytic">
                       <p class ="Features-paragraph">
-                         ✨ I have knowledge of Data Structures like Hash Tables, Trees, Tries, Graphs, and various algorithms for solving various problems efficiently.</p>
+                         ✨ text text text</p>
                       <p  class ="Features-paragraph">
-                         ✨ As I know Data Structures and Algorithms are the heart of programming, so I love to solve programming questions in different competitive websites like Codeforces, Codechef, Hackerrank and many more.</p>
+                         ✨ text text text </p>
                         </div>
                   </div>
               </div>
