--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h1>What Do I Do ?</h1>
               <div class = "row feature-1">
                   <div class="col-lg-6 col-md-6 Feature-first-image ">
-                    <img class = "Feature-svg-image" src="Image/trees.png" alt="">
+                    <img class = "Feature-svg-image" src="Image/trees.png" alt="" style="width: 50%; height: auto;">
                   </div>
                   <div class="col-lg-6 col-md-6">
                     <h1 class= "Feature-Heading" >Spatial Analysis</h1>
