--- a/Education.html
+++ b/Education.html
@@ -135,14 +135,14 @@
         <div class="container certificate">
         <div class="row">
             <div class="col-md-4">
-                <a target="_blank" href="https://drive.google.com/file/d/1UUptDeZZIcQRmsBUYdaL9Yj6kwFIxAxQ/view?usp=sharing">
+                <a target="_blank" href="https://www.esri.com/training/catalog/5ec3fd9fdbabbe0afc9fc173/geostatistical-interpolation-creating-a-3d-prediction-surface/">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
                             src="Image/C++.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text certificate-text">C++ with Data Structures and Algorithms
-                                <br><span style="color:gray">-by Coding Blocks</span>
+                            <p class="card-text certificate-text">Geostatistical Interpolation: Creating a 3D Prediction Surface
+                                <br><span style="color:gray">ESRI Academy</span>
                             </p>
                         
                         </div>
@@ -150,27 +150,27 @@
                 </a>
             </div>
             <div class="col-md-4">
-                <a target="_blank" href="https://www.sololearn.com/Certificate/1024-18007548/pdf/">
+                <a target="_blank" href="https://www.esri.com/training/catalog/5e274dcce6dcc22c5890eae1/geostatistical-interpolation-reaggregating-data-using-areal-interpolation/">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
                             src="Image/JavaScript.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text certificate-text">JavaScript Basics</p>
-                            <p class="certificate-text" style="color:gray">-by Sololearn</p>
+                            <p class="card-text certificate-text">Geostatistical Interpolation: Reaggregating Data Using Areal Interpolation</p>
+                            <p class="certificate-text" style="color:gray">ESRI Academy</p>
                         </div>
                     </div>
                 </a>
             </div>
             <div class="col-md-4">
-                <a target="_blank" href="https://drive.google.com/file/d/1xSYrX-rAThs5GAo1YVGYF2XuRXukm0tf/view?usp=sharing">
+                <a target="_blank" href="https://www.esri.com/training/catalog/5dcb0b0be4212b48e18f9187/geostatistical-interpolation-using-empirical-bayesian-kriging-and-ebk-regression-prediction/">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
                             src="Image/Data Science.jpg"
                             alt="Card image cap">
                         <div class="card-body">
-                            <p class="card-text certificate-text">Data Science</p>  
-                            <p class="certificate-text" style="color:gray">-by _____</p>  
+                            <p class="card-text certificate-text">Geostatistical Interpolation: Using Empirical Bayesian Kriging and EBK Regression Prediction</p>  
+                            <p class="certificate-text" style="color:gray">ESRI Academy</p>  
                         </div>
                     </div>
                 </a>
