--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <h1>What Do I Do ?</h1>
               <div class = "row feature-1">
                   <div class="col-lg-6 col-md-6 Feature-first-image ">
-                    <img class = "Feature-svg-image" src="Image/trees.png" alt="" style="width: 50%; height: auto;">
+                    <img class = "Feature-svg-image" src="Image/trees.png" alt="" style="width: 75%; height: auto;">
                   </div>
                   <div class="col-lg-6 col-md-6">
                     <h1 class= "Feature-Heading" >Spatial Analysis</h1>
@@ -103,12 +103,12 @@
                       </div>
                 </div>
                 <div class="col-lg-6 col-md-6 Feature-second-image ">
-                  <img class = "Feature-svg-image" src="Image/road.png" alt="">
+                  <img class = "Feature-svg-image" src="Image/road.png" alt="" style="width: 75%; height: auto;">
                 </div>
               </div>
               <div class="row feature-3">
                 <div class = "col-lg-6 col-md-6 Feature-third-image">
-                    <img class = "Feature-svg-image-3" src="Image/home.png" alt="">
+                    <img class = "Feature-svg-image-3" src="Image/home.png" alt="" style="width: 75%; height: auto;">
                   </div>
                   <div class="col-lg-6 col-md-6 feature-coding">
                     <h1 class="Feature-Heading">Database Structures</h1>
