--- a/Education.html
+++ b/Education.html
@@ -95,9 +95,8 @@
                                 <div class="box-content">
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://flemingcollege.ca/"
                                        target=_blank style="color: white;">Website</a>
-                                    <div class="box-item">✨ I have studied software engineering subjects like Data Structures,
-                                        Algorithms, DBMS, OS, CA, CN etc.</div>
-                                    <div class="box-item"><b>✨ CGPA</b>: 7.14 </div>
+                                    <div class="box-item">✨ text</div>
+                                    <div class="box-item"><b>✨ GPA etc </div>
                                 </div>
                             </div>
                         </div>
@@ -118,7 +117,7 @@
                                     <a class="btn btn-sm btn-dark float-right" role="button" href="https://trentu.ca/
                                        target=_blank style="color: white;">Website</a>
                                     <div class="box-item">✨ Info here</div>
-                                    <div class="box-item"><b>✨ Percentage</b>: 80%</div>
+                                    <div class="box-item"><b>✨ GPA etc</div>
 
                                 </div>
                             </div>
@@ -138,7 +137,7 @@
                 <a target="_blank" href="https://www.esri.com/training/catalog/5ec3fd9fdbabbe0afc9fc173/geostatistical-interpolation-creating-a-3d-prediction-surface/">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
-                            src="Image/C++.jpg"
+                            src="Image/brain1.png"
                             alt="Card image cap">
                         <div class="card-body">
                             <p class="card-text certificate-text">Geostatistical Interpolation: Creating a 3D Prediction Surface
@@ -153,7 +152,7 @@
                 <a target="_blank" href="https://www.esri.com/training/catalog/5e274dcce6dcc22c5890eae1/geostatistical-interpolation-reaggregating-data-using-areal-interpolation/">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
-                            src="Image/JavaScript.jpg"
+                            src="Image/brain11.png"
                             alt="Card image cap">
                         <div class="card-body">
                             <p class="card-text certificate-text">Geostatistical Interpolation: Reaggregating Data Using Areal Interpolation</p>
@@ -166,7 +165,7 @@
                 <a target="_blank" href="https://www.esri.com/training/catalog/5dcb0b0be4212b48e18f9187/geostatistical-interpolation-using-empirical-bayesian-kriging-and-ebk-regression-prediction/">
                     <div class="card mb-4 box-shadow">
                         <img class="card-img-top"
-                            src="Image/Data Science.jpg"
+                            src="Image/brain2.png"
                             alt="Card image cap">
                         <div class="card-body">
                             <p class="card-text certificate-text">Geostatistical Interpolation: Using Empirical Bayesian Kriging and EBK Regression Prediction</p>  
