--- a/Project.html
+++ b/Project.html
@@ -49,24 +49,21 @@
                 <section id=Projects class="Section1">
                     <div class="row">
                         <div class="col-lg-6 col-md-6">
-                            <img class="projectimage" src="Image/Project.svg" alt="">
+                            <img class="projectimage" src="Image/team.png" alt="">
                         </div>
                         <div class="col-lg-6 col-md-6 project-heading">
                           <h1 class = "P-heading">Projects</h1>
-                          <p class="p-text">My Project uses various technologies to make the model more accurate and stable. As of
-                            now, I haven't done many projects but in near future I will make more projects.
-                          </p>
+                          <p class="p-text">text text text</p>
 
                         </div>
                     </div>
                     <div class="row Section1">
                       <div class="col-sm-6">
-                        <a class="Project-box" target="_blank" href="https://github.com/AjitVerma15/Advance-Attendence-System">
+                        <a class="Project-box" target="_blank" href="">
                         <div class="card boxx">
                           <div class="card-body">
-                            <h5 class="card-title">Advanced Attendence System</h5>
-                            <p class="card-text project-text">This project makes the traditional attendence system advance by including features
-                              like marking attendence of students automatically using face recognition and detection.
+                            <h5 class="card-title">TCDSB Safe Schools Dashboard</h5>
+                            <p class="card-text project-text">Textttttttttt.
                               <span class="iconify" data-icon="logos:python" data-inline="false"></span>
                             </p>
 
@@ -75,12 +72,11 @@
                         </a>
                       </div>
                       <div class="col-sm-6">
-                        <a  class="Project-box" target="_blank" href="https://github.com/AjitVerma15/Telegram-Bot" >
+                        <a  class="Project-box" target="_blank" href="" >
                         <div class="card boxx">
                           <div class="card-body">
-                            <h5 class="card-title">Telegram Bot</h5>
-                            <p class="card-text project-text">This bot gives news on diferent topics like sports, entertainment, according to location and can do small-talk and also
-                              show the covid cases in your state.<span class="iconify" data-icon="logos:python" data-inline="false"></span><img class="iconify" src="Image/dialogflow.png" alt=""></p>
+                            <h5 class="card-title">Another Project</h5>
+                            <p class="card-text project-text">txt text text text<span class="iconify" data-icon="logos:python" data-inline="false"></span><img class="iconify" src="Image/dialogflow.png" alt=""></p>
                           </div>
                         </div>
                       </a>
@@ -88,7 +84,7 @@
                     </div>
                 </section>
 
-                <footer class=footer>Made with ❤️ by Ajit Verma</footer>
+                <footer class=footer>Made with ❤️ by Andie Herstek</footer>
 
 </body>
 </html>
