--- a/Education.html
+++ b/Education.html
@@ -59,17 +59,8 @@
     <section id=Section1>
         <div class="row">
             <div class="col-lg-6 col-md">
-                <img class="Programming" src="Image/Programming.svg" alt="">
+                <img class="Programming" src="Image/girl2.png" alt="">
             </div>
-            <div class="col-lg-6 col-md Coding">
-                <h1>Competitive Programming</h1>
-                <ul class="competitive_icon">
-                    <li><a href="https://www.hackerrank.com/Ajitverma?hr_r=1" target="_blank"><i class="fab fa-hackerrank fa-4x"></i><a></i></li>
-                    <li><a href="https://www.hackerearth.com/@ajit457" target="_blank"><i class="iconify" data-icon="simple-icons:hackerearth" data-inline="false" data-width=50px
-                            data-height=50px></i></a></li>
-                </ul>
-            </div>
-        </div>
     </section>
     <section>
         <div class="container">
