--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
 
           <section id=Whatido>
-            <h1>What Do I Do ?</h1>
+            <h1>My Interests</h1>
               <div class = "row feature-1">
                   <div class="col-lg-6 col-md-6 Feature-first-image ">
                     <img class = "Feature-svg-image" src="Image/trees.png" alt="" style="width: 75%; height: auto;">
