--- a/contact.html
+++ b/contact.html
@@ -62,7 +62,7 @@
                 <img class = "Profilepic" src="Image/girl1.png" alt="">
             </div>
             <div class="col-lg-6 col-md-6 context">
-                <h1>Reach out to me!</h1>
+                <h1>Lets chat!</h1>
                 <p> text text text text </p>
                 <ul class="ico">
                     <li class="icon"><a href="https://github.com/aherstek" target=_blank><span class="iconify github" data-icon="ant-design:github-filled" data-inline="false"  data-width="50" data-height="50"></span></li></a>
@@ -70,7 +70,6 @@
                      <li class="icon"><a href="https://www.linkedin.com/in/andieh-/" target=_blank><span class="iconify linkedin" data-icon="entypo-social:linkedin-with-circle" data-inline="false"  data-width="50" data-height="50"></span></li></a>
                     <li class="icon"><a href="mailto:andieherstek@gmail.com" target=_blank><span class="iconify google" data-icon="ant-design:google-plus-circle-filled" data-inline="false" data-width="50" data-height="50"></span></li></a>
                     </ul>
-                    <a href="https://drive.google.com/file/d/1fUl3-3KZQbWz3x6eBLSC2qZboLyWgj6o/view?usp=sharing" target=_blank><button type="button" class="btn btn-primary btn-lg Resume">See my Resume</button></a>
              </div>
         </div>
         </section>
@@ -78,7 +77,6 @@
         <div class="second-section">
             <h1 class="connect">text text text!</h1>
             <div class="col-lg-6 connect-image">
-            <img  class= "connection" src="Image/connection.svg" alt="">
         </div>
         </div>
     </section>
